# chatgpt-oauth-rs

./: BACKEND_API_NOTES.md  Cargo.toml  README.md  STREAM_EVENTS_OBSERVED.md
examples/: agent_loop.rs  capture.rs  dump_events.rs  oneshot_chat.rs  streaming_chat.rs
src/: auth.rs  capture.rs  client.rs  error.rs  event.rs  input.rs  lib.rs
